--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "env-cmd": "10.1.0",
     "express": "4.17.1",
     "express-validator": "6.14.0",
+    "supertest": "^6.2.3",
     "swagger-ui-express": "4.3.0",
     "yamljs": "0.3.0"
   }
